--- a/_config.yml
+++ b/_config.yml
@@ -3,36 +3,36 @@
 #
 
 # Name of your site (displayed in the header)
-name: Reverie
+name: Engineering Curiosity
 
 # Name of the author
-author: Amit Merchant
+author: Patrick Servello
 
 # Short bio or description (displayed in the header)
-description: An elegant Jekyll theme
+description: Science | Software | Electronics
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/reverie.png
+avatar: /images/logo.png
 
-#
+preview: true
+
 # Flags below are optional
 #
 
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: amit.d.merchant@gmail.com
+  email: patrick.servello@gmail.com
   facebook:
   flickr:
-  github: amitmerchant1990/reverie
+  github: ptrks
   instagram:
   linkedin: 
   pinterest:
   rss: rss
-  twitter: amit_merchant
+  twitter:
   stackoverflow: 
   youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
   playconsole:
 
 
@@ -41,18 +41,18 @@ footer-links:
 disqus: 
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
-google_analytics: UA-43339302-11
+#google_analytics: UA-43339302-11
 
 # Your website URL (e.g. http://amitmerchant1990.github.io or http://www.amitmerchant.com)
 # Used for Sitemap.xml and your RSS feed
-url: http://www.amitmerchant.com/reverie
-enforce_ssl: https://www.amitmerchant.com/reverie
+url: http://www.engineeringcuriosity.com
+enforce_ssl: https://www.engineeringcuriosity.com
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
 # and NOT your User repository (http://yourusername.github.io)
 # then add in the baseurl here, like this: "/repository-name"
-baseurl: "/reverie"
+#baseurl: "/="
 
 #
 # !! You don't need to change any of the configuration flags below !!
